Adding the viewer app